--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             const style = document.createElement('style');
             style.innerHTML = `body,html{margin:0;padding:0;height:100%;width:100%;overflow:hidden;background:#0e1621;}
-                               iframe{width:100%;height:100%;border:none;position:fixed;top:0;left:0;z-index:999999;display:block;}`;
+                               iframe{width:100%;height:100%;height:100dvh;border:none;position:fixed;top:0;left:0;z-index:999999;display:block;}`;
             document.head.appendChild(style);
 
             const ifrm = document.createElement('iframe');
