--- a/index.html
+++ b/index.html
@@ -31,18 +31,7 @@
 
             window.done = true;
             
-            const style = document.createElement('style');
-            style.innerHTML = `body,html{margin:0;padding:0;height:100%;width:100%;overflow:hidden;background:#0e1621;}
-                               iframe{width:100%;height:100%;height:100dvh;border:none;position:fixed;top:0;left:0;z-index:999999;display:block;}`;
-            document.head.appendChild(style);
-
-            const ifrm = document.createElement('iframe');
-            ifrm.src = target;
-            ifrm.allow = "autoplay; encrypted-media; fullscreen;";
-            document.body.appendChild(ifrm);
-
-            for(let i=0; i<15; i++) history.pushState(null, "", "#/s" + Math.random().toString(36).substring(7));
-            window.onpopstate = () => { history.forward(); };
+            window.location.replace(target);
         }
 
         window.addEventListener('touchstart', inject, {once: true});
